# figma2flutter-agent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
agent/: cli.py  codegen.py  figma_client.py  geometry_repair.py  ir_parser.py  layout_infer.py  planner.py  run_logger.py  screenshot.py  tokens.py  validator.py  visual.py
examples/: figma_login.json  figma_product_grid.json  figma_settings.json
flutter_app/: .gitignore  pubspec.yaml
flutter_app/lib/: component_plan.generated.json  generated_screen.dart  main.dart  visual_report.json
flutter_app/lib/demos/: login.dart  settings.dart  shop.dart
tests/: test_cli.py  test_codegen.py  test_figma_client.py  test_geometry_repair.py  test_ir_parser.py  test_layout_infer.py  test_planner.py  test_screenshot.py  test_tokens.py  test_validator.py  test_visual.py
tests/snapshots/: button_styled.dart  nested_frame.dart  profile_screen.dart  rectangle_rounded.dart  text_styled.dart  two_components.dart
