[project]
name = "figma2flutter-agent"
version = "0.0.1"
description = "AI-assisted pipeline that converts a Figma mobile screen into Flutter UI code."
requires-python = ">=3.10"
dependencies = [
    # Visual validation (--visual-validate): PNG decode + diff/SSIM metrics.
    "pillow>=10",
    "numpy>=1.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
