[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "figma2flutter-agent"
version = "0.1.0"
description = "AI-assisted pipeline that converts a Figma mobile screen into Flutter UI code."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "jieshiyun" }]
dependencies = [
    # Visual validation (--visual-validate): PNG decode + diff/SSIM metrics.
    "pillow>=10",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/jieshiyun/figma2flutter-agent"

[project.scripts]
figma2flutter = "agent.cli:main"

[tool.setuptools]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
