[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "figma-flutter-codegen"
version = "0.2.0"
description = "AI-assisted pipeline that converts a Figma mobile screen into Flutter UI code."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Krystal" }]
dependencies = [
    # Visual validation (--visual-validate): PNG decode + diff/SSIM metrics.
    "pillow>=10",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/KrystalJie/figma-flutter-codegen"

[project.scripts]
figma2flutter = "agent.cli:main"

[tool.setuptools]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
